--- a/cases/plan/error_unsupport_sql.yaml
+++ b/cases/plan/error_unsupport_sql.yaml
@@ -61,3 +61,15 @@ cases:
     mode: request-unsupport
     sql: |
       insert into t1 values(1, 2, aaa);
+  - id: in_predicate_unnest_unsupport
+    desc: unnest expression in in list is not supported
+    sql: |
+      select 1 IN UNNEST([1, 2, 3])
+    expect:
+      success: false
+
+  - id: in_predicate_fail
+    desc: error with empty in list
+    sql: select 'a' in () from t1;
+    expect:
+      success: false
