--- a/.github/workflows/integration-test-pkg.yml
+++ b/.github/workflows/integration-test-pkg.yml
@@ -1,6 +1,12 @@
 name: integration-test-pkg
 
 on:
+  push:
+    branches:
+      - main
+    tags:
+      - v*
+  pull_request:
   workflow_dispatch:
     inputs:
       version:
