--- a/.github/workflows/integration-test-pkg.yml
+++ b/.github/workflows/integration-test-pkg.yml
@@ -43,7 +43,7 @@ jobs:
         if: always()
         uses: peaceiris/actions-gh-pages@v2
         env:
-          PERSONAL_TOKEN: ${{ secrets.CAP_ZW }}
+          PERSONAL_TOKEN: ${{ secrets.CR_PAT_ZW }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
 
