--- a/cases/query/window_with_union_query.yaml
+++ b/cases/query/window_with_union_query.yaml
@@ -20,7 +20,7 @@ cases:
     sql: |
       SELECT col2, col5, sum(col1) OVER w1 as w1_col1_sum, sum(col3) OVER w1 as w1_col3_sum,
       sum(col4) OVER w1 as w1_col4_sum, sum(col2) OVER w1 as w1_col2_sum,
-      sum(col5) OVER w1 as w1_col5_sum, count(col1) as w1_col1_cnt, col1,
+      sum(col5) OVER w1 as w1_col5_sum, count(col1) OVER w1 as w1_col1_cnt, col1,
       col6 as col6 FROM t1
       WINDOW w1 AS (UNION t3 PARTITION BY t1.col2 ORDER BY t1.col5 ROWS_RANGE BETWEEN 2 PRECEDING AND CURRENT ROW) limit 10;
     inputs:
@@ -59,7 +59,7 @@ cases:
     sql: |
       SELECT col2, col5, sum(col1) OVER w1 as w1_col1_sum, sum(col3) OVER w1 as w1_col3_sum,
       sum(col4) OVER w1 as w1_col4_sum, sum(col2) OVER w1 as w1_col2_sum,
-      sum(col5) OVER w1 as w1_col5_sum, count(col1) as w1_col1_cnt, col1,
+      sum(col5) OVER w1 as w1_col5_sum, count(col1) OVER w1 as w1_col1_cnt, col1,
       col6 as col6 FROM t1
       WINDOW w1 AS (UNION t3 PARTITION BY t1.col2 ORDER BY t1.col5 ROWS_RANGE BETWEEN 2 PRECEDING AND CURRENT ROW) limit 10;
     inputs:
@@ -99,7 +99,7 @@ cases:
     sql: |
       SELECT col2, col5, sum(col1) OVER w1 as w1_col1_sum, sum(col3) OVER w1 as w1_col3_sum,
       sum(col4) OVER w1 as w1_col4_sum, sum(col2) OVER w1 as w1_col2_sum,
-      sum(col5) OVER w1 as w1_col5_sum, count(col1) as w1_col1_cnt, col1,
+      sum(col5) OVER w1 as w1_col5_sum, count(col1) OVER w1 as w1_col1_cnt, col1,
       col6 as col6 FROM t1
       WINDOW w1 AS (UNION (select c0 as col0, c1 as col1, c2 as col2, c3 as col3, 0.0 as col4, c5 as col5, "NA" as col6 from tb)
       PARTITION BY t1.col2 ORDER BY t1.col5 ROWS_RANGE BETWEEN 2 PRECEDING AND CURRENT ROW) limit 10;
@@ -139,7 +139,7 @@ cases:
     sql: |
       SELECT col2, col5, sum(col1) OVER w1 as w1_col1_sum, sum(col3) OVER w1 as w1_col3_sum,
       sum(col4) OVER w1 as w1_col4_sum, sum(col2) OVER w1 as w1_col2_sum,
-      sum(col5) OVER w1 as w1_col5_sum, count(col1) as w1_col1_cnt, col1,
+      sum(col5) OVER w1 as w1_col5_sum, count(col1) OVER w1 as w1_col1_cnt, col1,
       col6 as col6 FROM t1
       WINDOW w1 AS (UNION (select c0 as col0, c1 as col1, c2 as col2, c3 as col3, 0.0 as col4, c5 as col5, "NA" as col6 from tb)
       PARTITION BY t1.col2 ORDER BY t1.col5 ROWS_RANGE BETWEEN 2 PRECEDING AND CURRENT ROW INSTANCE_NOT_IN_WINDOW) limit 10;
