--- a/hybridse/java/hybridse-sdk/pom.xml
+++ b/hybridse/java/hybridse-sdk/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
         <artifactId>hybridse-java</artifactId>
         <groupId>com.4paradigm.hybridse</groupId>
-        <version>0.2.4-SNAPSHOT</version>
+        <version>0.2.4-0916-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -18,15 +18,15 @@
 	<profiles>
 		<profile>
 			<id>default</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
 			<properties>
                 <versionFromProfile>${project.version.base}${project.version.suffix}</versionFromProfile>
 			</properties>
 		</profile>
 		<profile>
 			<id>macos</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<properties>
                 <versionFromProfile>${project.version.base}-macos${project.version.suffix}</versionFromProfile>
 			</properties>
